--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/employee
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 server.port=8081
+frontend.url=http://localhost:3000
